# wallet-integration

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  STATUS.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: reviewer.md  secret-scanner.md  wallet-jwt-validator.md
.claude/commands/: new-phase.md  ship.md
.claude/skills/debugging-hebrew-ocr/: SKILL.md
.claude/skills/tg-local-testing/: SKILL.md
docs/research/: 2026-04-22-hebrew-ocr-library-survey.md
docs/superpowers/plans/: 2026-04-21-phase-01-telegram-webhook.md  2026-04-28-phase-03-barcode-decoding.md  2026-04-28-phase-04-wallet-pass.md
docs/superpowers/specs/: 2026-04-21-phase-01-telegram-webhook-design.md  2026-04-28-phase-03-barcode-decoding-design.md  2026-04-28-phase-04-wallet-pass-design.md
features/barcode-extraction/: CLAUDE.md  plan.md
hooks/: post_python_edit.sh  pre_edit_guard.sh  start.sh
phases/00-scaffold/: CLAUDE.md  plan.md
phases/01-telegram-webhook/: CLAUDE.md  plan.md
phases/02-vision-extraction/: CLAUDE.md  plan.md
phases/03-barcode-decode/: CLAUDE.md  plan.md
phases/04-wallet-pass/: CLAUDE.md  plan.md
phases/05-end-to-end/: CLAUDE.md  plan.md
phases/06-observability/: CLAUDE.md  plan.md
phases/07-release-pipeline/: CLAUDE.md  plan.md
scripts/: eval_barcode.py  eval_ocr.py
src/wallet_bot/: __init__.py  config.py  main.py
src/wallet_bot/handlers/: __init__.py  _render.py  _safe.py  _typing.py  callback_handler.py  edit_reply_handler.py  help_handler.py  photo_handler.py  start_handler.py
src/wallet_bot/models/: __init__.py  callback_ids.py  ticket.py  wallet.py
src/wallet_bot/services/: __init__.py  barcode_service.py  draft_store.py  gemini_vision.py  pass_store.py  telegram_client.py  vision_service.py  wallet_service.py
src/wallet_bot/viewmodels/: __init__.py
src/wallet_bot/views/: __init__.py
tests/: conftest.py
tests/unit/: test_config.py  test_handlers.py  test_smoke.py  test_webhook_auth.py  test_webhook_phase02.py
tests/unit/handlers/: test_callback_handler.py  test_edit_reply_handler.py  test_photo_handler.py  test_render.py  test_safe_handler.py
tests/unit/models/: test_callback_ids.py  test_ticket.py  test_wallet.py
tests/unit/services/: test_barcode_service.py  test_draft_store.py  test_gemini_vision.py  test_pass_store.py  test_telegram_client.py  test_vision_facade.py  test_wallet_service.py
